add ixlt4 module(unfinished)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo"><img src="https://cdn.7tv.app/emote/62fc47223b0b86169e3809f0/3x.webp"
-                    style="height:64px;" /></a>
+            <a href="./index.html" class="brand-logo"><img
+                    src="https://cdn.7tv.app/emote/62fc47223b0b86169e3809f0/3x.webp" style="height:64px;" /></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">IXLT-4</a></li>
-                <li><a href="#">IXLT-6</a></li>
-                <li><a href="#">HomePage</a></li>
+                <li><a href="./ixlt4.html">IXLT-4</a></li>
+                <li><a href="./ixlt6.html">IXLT-6</a></li>
             </ul>
         </div>
     </nav>
@@ -26,8 +25,8 @@
         <h5 class="header col s12 light">Test your ability of XQC Language</h5>
     </div>
     <div class="row center">
-        <a href="/ixlt4.html" id="download-button" class="btn-large waves-effect waves-light orange">IXLT-4</a>
-        <a href="/ixlt6.html" id="download-button" class="btn-large waves-effect waves-light blue">IXLT-6</a>
+        <a href="./ixlt4.html" id="ixlt4" class="btn-large waves-effect waves-light orange">IXLT-4</a>
+        <a href="./ixlt6.html" id="ixlt6" class="btn-large waves-effect waves-light blue">IXLT-6</a>
     </div>
     <div class="row">
         <div class="col s7 offset-s3">
@@ -46,7 +45,8 @@
                 <div class="card-content">
                     <span class="card-title">What is IXLT?</span>
                     <p>IXLT stands for <strong>I</strong>nternational <strong>X</strong>QC <strong>L</strong>anguage
-                        <strong>T</strong>est</p>
+                        <strong>T</strong>est
+                    </p>
                     <p>IXLT provides the ability rank of the XQC Language speaker or translator</p>
                     <p>Also,you can form a basic understaing of having the ability to be an XQC clip translator or not
                     </p>
@@ -60,7 +60,7 @@
                     <p>You can create <a href="https://github.com/Caviar-X/ixlt/issues" target="_blank">issues</a> or <a
                             href="https://github.com/Caviar-X/ixlt/pulls" target="_blank">pull requests</a> to make
                         contributes</p>
-                    <p>Or you can find the contact information of the maintainer below</p>    
+                    <p>Or you can find the contact information of the maintainer below</p>
                 </div>
             </div>
         </div>
@@ -69,7 +69,8 @@
                 <div class="card-content">
                     <span class="card-title">Maintainer contact information</span>
                     <p>If you want to make contributes or provide advice without github account.</p>
-                    <p>You can dm me on <a href="https://www.twitch.tv/e_waste" target="_blank">twitch</a> and <a href="https://www.reddit.com/user/ConnectToInternet" target="_blank">reddit</a></p>
+                    <p>You can dm me on <a href="https://www.twitch.tv/e_waste" target="_blank">twitch</a> and <a
+                            href="https://www.reddit.com/user/ConnectToInternet" target="_blank">reddit</a></p>
                 </div>
             </div>
         </div>
